WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117016
HTMLMediaElement will not unthrottle page when playback stops for nreasons other than user-initiated pause.
https://bugs.webkit.org/show_bug.cgi?id=117016
Summary
HTMLMediaElement will not unthrottle page when playback stops for nreasons ot...
Jer Noble
Reported
2013-05-29 22:38:17 PDT
HTMLMediaElement will not unthrottle page when playback stops for nreasons other than user-initiated pause.
Attachments
Patch
(22.89 KB, patch)
2013-05-30 00:34 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(22.91 KB, patch)
2013-05-30 00:46 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-05-29 22:40:06 PDT
PageThrottler was introduced by
http://trac.webkit.org/changeset/150935
, a fix for
bug #116893
. The unthrottling case will only be triggered for user or script initiated "pause()", but will not unthrottle when stopped due to network congestion, media engine errors, or when the media plays to the end of its duration.
Jer Noble
Comment 2
2013-05-29 23:22:02 PDT
<
rdar://problem/14020751
>
Jer Noble
Comment 3
2013-05-30 00:34:24 PDT
Created
attachment 203316
[details]
Patch
EFL EWS Bot
Comment 4
2013-05-30 00:40:30 PDT
Comment on
attachment 203316
[details]
Patch
Attachment 203316
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/759050
kov's GTK+ EWS bot
Comment 5
2013-05-30 00:40:55 PDT
Comment on
attachment 203316
[details]
Patch
Attachment 203316
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/675666
EFL EWS Bot
Comment 6
2013-05-30 00:41:54 PDT
Comment on
attachment 203316
[details]
Patch
Attachment 203316
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/658302
Early Warning System Bot
Comment 7
2013-05-30 00:43:12 PDT
Comment on
attachment 203316
[details]
Patch
Attachment 203316
[details]
did not pass qt-wk2-ews (qt-wk2): Output:
http://webkit-queues.appspot.com/results/673309
Jer Noble
Comment 8
2013-05-30 00:46:56 PDT
Created
attachment 203317
[details]
Patch Use nullptr for clearing OwnPtr rather than 0.
Jer Noble
Comment 9
2013-05-30 11:18:45 PDT
Comment on
attachment 203317
[details]
Patch Clearing flags on attachment: 203317 Committed
r150971
: <
http://trac.webkit.org/changeset/150971
>
Jer Noble
Comment 10
2013-05-30 11:18:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug